# Mario

./: CMakeLists.txt  Mario
assets/maps/: map.txt
cmake_modules/: FindSFML.cmake
srcs/includes/: Case.hpp  Core.hpp  Game.hpp  Map.hpp  Tools.hpp
srcs/includes/Graphical/: Fonts.hpp  Sfml.hpp  Sprites.hpp
srcs/srcs/: loopGame.cpp  main.cpp  resources.cpp
srcs/srcs/Events/: events.cpp  mouseEvents.cpp
srcs/srcs/Game/: game.cpp  map.cpp
